# pepper_plymouth_ros

./: CMakeLists.txt  README.md  package.xml
config/: pepper.rviz
launch/: create_map.launch  mapping.launch  nav.launch  octomap_mapping.launch
maps/: map.pgm  map.yaml  map_clean.pgm
nav_conf/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_planner.yaml
